--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ flask==0.11.1
 beautifulsoup4==4.6.0
 requests[socks]==2.17.3
 Flask-Cache==0.13.1
+Flask-SQLAlchemy==2.3.2
+sqlalchemy-migrate==0.11.0
